# cloud-computing-midterm-project

./: README.md
backend/: docker-compose.api.yml
backend/api-gateway/: .gitignore  Dockerfile  go.mod  go.sum
backend/api-gateway/cmd/: main.go
backend/api-gateway/pkg/auth/: auth.go  (+2 more)
backend/orchestrator/: .gitignore  Cargo.toml
backend/orchestrator/src/: lib.rs  main.rs  state.rs
backend/orchestrator/src/models/: review.rs
backend/orchestrator/src/routes/: make_review.rs  mod.rs  posts_view.rs  profiles_view.rs
backend/orchestrator/src/services/: http.rs
backend/post-service/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  postman_collection.json
backend/post-service/src/: app.module.ts  main.ts
backend/profile-service/: .env  .env.example  .gitignore  Dockerfile  Gemfile  docker-compose.yml  profile-service.json
backend/profile-service/config/: application.rb  credentials.yml.enc  database.yml  deploy.yml  master.key  routes.rb
backend/purchase-service/: app.py  database.py  db.txt  main.py  models.py  requirements.txt  schemas.py
backend/purchase-service/src/: database.py  db.py  main.py  middleware.py  models.py  schemas.py  utils.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/src/: env.ts
frontend/src/api/: post.ts  profile.ts
frontend/src/app/: layout.tsx
frontend/src/auth/: index.ts
frontend/src/components/: Post.tsx  TextInput.tsx  app-sidebar copy.tsx  app-sidebar.tsx  main-sidebar.tsx  nav-main copy.tsx  nav-secondary copy.tsx  nav-user.tsx
frontend/src/schemas/: post.ts
(+75 files in other folders)
