[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
axum = { version = "0.8.4", features = ["macros"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros", "signal"] }
hyper = "1.6.0"
hyper-util = "0.1.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"
futures = "0.3.31"
tower-http = { version = "0.6.4", features = ["trace", "timeout", "limit", "compression-br"] }
deadpool = "0.12.2"